{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 46,
  "lineage": "542687e8-a06e-478d-803a-f98cef57fbe7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006217752970:subnet/subnet-0c27ae763d54e7dbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "172.31.100.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c27ae763d54e7dbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "006217752970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "shopmefy-public-1",
              "Owner": "Andrea",
              "Project": "ShopMefy"
            },
            "vpc_id": "vpc-06ab86a4c7eb298a1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006217752970:vpc/vpc-06ab86a4c7eb298a1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01aab62cd80218911",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a20e8d3595b60a61",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ab86a4c7eb298a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-049763a24cd53e4c7",
            "owner_id": "006217752970"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e75e58d31e04c030",
            "arn": "arn:aws:ec2:us-east-1:006217752970:elastic-ip/eipalloc-0e75e58d31e04c030",
            "association_id": "eipassoc-08cd9ea701282dd89",
            "domain": "vpc",
            "id": "eipalloc-0e75e58d31e04c030",
            "instance": "i-034cb01e23c547a96",
            "network_border_group": "us-east-1",
            "network_interface": "eni-007e62e905169c3d6",
            "private_dns": "ip-172-31-100-231.ec2.internal",
            "private_ip": "172.31.100.231",
            "public_dns": "ec2-52-20-128-220.compute-1.amazonaws.com",
            "public_ip": "52.20.128.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "shopmefy-eip"
            },
            "tags_all": {
              "Name": "shopmefy-eip",
              "Owner": "Andrea",
              "Project": "ShopMefy"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.main",
            "aws_security_group.web",
            "data.aws_ami.ubuntu",
            "data.aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054d6a336762e438e",
            "arn": "arn:aws:ec2:us-east-1:006217752970:instance/i-034cb01e23c547a96",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034cb01e23c547a96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "shopmefy-key-b977cbd9",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007e62e905169c3d6",
            "private_dns": "ip-172-31-100-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.100.231",
            "public_dns": "ec2-54-174-240-204.compute-1.amazonaws.com",
            "public_ip": "54.174.240.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:006217752970:key/aad292b6-87e6-48fd-b125-0b4fe1ccb81f",
                "tags_all": {
                  "Owner": "Andrea",
                  "Project": "ShopMefy"
                },
                "throughput": 125,
                "volume_id": "vol-09cce8633a698caef",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "shopmefy-web-20250605121237185000000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c27ae763d54e7dbf",
            "tags": {
              "Name": "shopmefy-web-server"
            },
            "tags_all": {
              "Name": "shopmefy-web-server",
              "Owner": "Andrea",
              "Project": "ShopMefy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053d1ee5f0daa724d"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.web",
            "data.aws_ami.ubuntu",
            "data.aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006217752970:security-group/sg-07ce0e682014a2c92",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-07ce0e682014a2c92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053d1ee5f0daa724d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "shopmefy-db-20250605121240789000000002",
            "name_prefix": "shopmefy-db-",
            "owner_id": "006217752970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopmefy-db-sg"
            },
            "tags_all": {
              "Name": "shopmefy-db-sg",
              "Owner": "Andrea",
              "Project": "ShopMefy"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ab86a4c7eb298a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006217752970:security-group/sg-053d1ee5f0daa724d",
            "description": "Security group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053d1ee5f0daa724d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shopmefy-web-20250605121237185000000001",
            "name_prefix": "shopmefy-web-",
            "owner_id": "006217752970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopmefy-web-sg"
            },
            "tags_all": {
              "Name": "shopmefy-web-sg",
              "Owner": "Andrea",
              "Project": "ShopMefy"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ab86a4c7eb298a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006217752970:subnet/subnet-0cf767ed821fccfa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf767ed821fccfa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "006217752970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopmefy-public-subnet-2"
            },
            "tags_all": {
              "Name": "shopmefy-public-subnet-2",
              "Owner": "Andrea",
              "Project": "ShopMefy"
            },
            "vpc_id": "vpc-06ab86a4c7eb298a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}